# igame_main

./: README.md
APIs/: README.md
APIs/app/: README.md  main.py  requirements.txt
APIs/app/scripts/: __init__.py  pydantic_model.py  utils.py
NPC INTERACTIONS/: README.md
NPC Training/: README.md
World Builder/: README.md
XAI-Game-Balance/: README.md
XAI-Game-Balance/game-balance-toolkit/: README.md  environment.yml  gamebalancev1.txt  pyproject.toml  requirements.txt
XAI-Game-Balance/game-balance-toolkit/apps/: streamlit_app.py
XAI-Game-Balance/game-balance-toolkit/examples/: sample.jsonl  synth_demo.jsonl  tiny_showcase.jsonl
XAI-Game-Balance/game-balance-toolkit/output_test/: sessions_with_preds.csv  summary.json  synthetic_logs.jsonl
XAI-Game-Balance/game-balance-toolkit/output_test/levels/: level_L0.json  level_L1.json  level_L10.json  level_L11.json  level_L2.json  level_L3.json  level_L4.json  level_L5.json  level_L6.json  level_L7.json  level_L8.json  level_L9.json
XAI-Game-Balance/game-balance-toolkit/src/game_balance_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
XAI-Game-Balance/game-balance-toolkit/src/gbt/: __init__.py  archetypes.py  cli.py  data.py  elo.py  features.py  model.py  report.py
